# LLM

./: .gitignore  README.md  pyproject.toml  relu.cu  relu.py
cuda/: cuda_0.cu
minimind/dataset/: __init__.py
minimind/model/: model_minimind.py
minimind/scripts/: train_tokenizer.py
