[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonlines>=4.0.0",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
